--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -20,6 +20,9 @@
 				        <a class="nav-link" href="#footer">Contact</a>
 				      </li>
 			    </ul>
+			    <!-- {% if request.user.is_staff %}
+			    <a href="{% url 'register' %}" id="login">Register</a>
+			    {% endif %} -->
 			    <a href="{% url 'login' %}" id="login">Login</a>
 		    </div>
 		</div>
