profile mycourse department

--- a/base/templates/base/afterlogin.html
+++ b/base/templates/base/afterlogin.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="{% static 'css/after_login.css' %}">
         <link rel="stylesheet" href="{% static 'css/mycourses.css' %}">
         <link rel="stylesheet" href="{% static 'css/profile.css' %}">
+        <link rel="stylesheet" href="{% static 'css/teacherslist.css' %}">
 
         <!-- for scrolling effect -->
         <link rel="stylesheet" href="{% static 'css/scroll.css' %}">
