--- a/base/templates/base/profileteacher.html
+++ b/base/templates/base/profileteacher.html
@@ -13,10 +13,8 @@
 	<hr>
 	<div class="row">
 		<div class="col-sm-6">
-			<div>{{s.Year_of_study}}</div>
-			<div>University RollNo.: {{s.RollNo}}</div>
-			<div>Branch: {{s.Department}}</div>
-			<div>Year of Graduation:</div>
+			<div><p><strong>{{t.Type}}</strong></p></div>
+			<div>Department: {{t.Department}}</div>
 			<br><br>
 			<div id="heading">User Details</div>
 			<hr style="width: 50%">
