--- a/base/templates/base/department.html
+++ b/base/templates/base/department.html
@@ -6,7 +6,7 @@
 <div class="container" id="department">
     <div class="row">
         <div class="col-12 singledepartment scrolleffect">
-            <a href="">
+            <a href="{% url 'teachers' 'Computer Science & Engineering' %}">
                 <div class="row align-items-center">
                     <div class="image" style="background-color: #b8de6f;"><i class="fas fa-laptop-code"></i></div>
                     <div>
@@ -16,7 +16,7 @@
             </a>
         </div>
         <div class="col-12 singledepartment scrolleffect">
-            <a href="">
+            <a href="{% url 'teachers' 'Electrical & Instrumentation Engineering' %}">
                 <div class="row align-items-center">
                     <div class="image" style="background-color: #ffc93c;"><i class="fas fa-bolt"></i></div>
                     <div>
@@ -26,7 +26,7 @@
             </a>
         </div>
         <div class="col-12 singledepartment scrolleffect">
-            <a href="">
+            <a href="{% url 'teachers' 'Electronics & Communication Engineering' %}">
                 <div class="row align-items-center">
                     <div class="image" style="background-color: #1f6f8b;"><i class="fas fa-charging-station"></i></div>
                     <div>
@@ -36,7 +36,7 @@
             </a>
         </div>
         <div class="col-12 singledepartment scrolleffect">
-            <a href="">
+            <a href="{% url 'teachers' 'Civil Engineering' %}">
                 <div class="row align-items-center">
                     <div class="image" style="background-color: #f39233;"><i class="fas fa-hard-hat"></i></div>
                     <div>
@@ -46,7 +46,7 @@
             </a>
         </div>
         <div class="col-12 singledepartment scrolleffect">
-            <a href="">
+            <a href="{% url 'teachers' 'Chemical Engineering' %}">
                 <div class="row align-items-center">
                     <div class="image" style="background-color: #01c5c4;"><i class="fas fa-atom"></i></div>
                     <div>
@@ -56,7 +56,7 @@
             </a>
         </div>
         <div class="col-12 singledepartment scrolleffect">
-            <a href="">
+            <a href="{% url 'teachers' 'Mechanical Engineering' %}">
                 <div class="row align-items-center">
                     <div class="image" style="background-color: #835858;"><i class="fas fa-cogs"></i></div>
                     <div>
@@ -66,7 +66,7 @@
             </a>
         </div>
         <div class="col-12 singledepartment scrolleffect">
-            <a href="">
+            <a href="{% url 'teachers' 'Department of Biotechnology' %}">
                 <div class="row align-items-center">
                     <div class="image" style="background-color: #de4463;"><i class="fas fa-microscope"></i></div>
                     <div>
