--- a/static/css/mycourses.css
+++ b/static/css/mycourses.css
@@ -9,10 +9,15 @@
 	box-shadow: 0px 1px 10px #999;
 }
 
-#deppage #main #courses .singlecourse div.image img{
+
+#deppage #main #courses .singlecourse div.image{
 	width: 100%;
 	height: 100%;
 	margin-bottom: 20px;
+}
+
+#deppage #main #courses .singlecourse div.image p{
+	color: white;
 }
 
 #deppage #main #courses a{
