--- a/base/templates/base/teacherlist.html
+++ b/base/templates/base/teacherlist.html
@@ -6,7 +6,7 @@
 <div class="container" id="faculty">
 	<div class="row">
 		{% for i in t %}
-		<div class="col-md-6">
+		<div class="col-md-6 scrolleffect">
 			<div class="row mx-0" id="faculty-box">
 				<div class="col-md-4 px-0">
 					<div id="faculty-img">
