--- a/base/templates/base/course.html
+++ b/base/templates/base/course.html
@@ -7,7 +7,7 @@
     <div class="row">
         {% for i in courses %}
         <div class="col-8 col-md-3 singlecourse scrolleffect" style="margin: 20px;">
-            <a href="">
+            <a href="{% url 'courseteachers' i.Name %}">
                 <div class="align-items-center">
                     <div class="image">
                         <p style="text-align: center; background-color: {{i.color}};">{{i}}</p>
@@ -21,7 +21,7 @@
         {% endfor %}
         {% for i in coursesteacher %}
         <div class="col-8 col-md-3 singlecourse scrolleffect" style="margin: 20px;">
-            <a href="">
+            <a href="{% url 'courseteachers' i.Name %}">
                 <div class="align-items-center">
                     <div class="image">
                         <p style="text-align: center; background-color: {{i.color}};">{{i}}</p>
