--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -6,11 +6,20 @@ ul li{
 	list-style-type: none;
 }
 
+#deppage #main #profile{
+	color: #1AA6B7;
+}
+
+#deppage #main #profile strong{
+	color: #002D40;
+}
+
 #deppage #main #profile #name{
 	height: 100px;
 	font-size: 2.5em;
 	margin-top: 100px;
 	margin-bottom: 20px;
+	color: #002D40;
 }
 
 #deppage #main #profile #name svg{
@@ -18,6 +27,11 @@ ul li{
 	margin-top: 15px;
 }
 
-#deppage #main #profile #heading{
-	text-align: center;
+#deppage #main #profile #heading strong{
+	color: #FF414D;
+}
+
+#deppage #main #profile #profiledetails{
+	margin-top: 70px;
+	margin-bottom: 70px;
 }
