--- a/base/templates/base/afterlogin.html
+++ b/base/templates/base/afterlogin.html
@@ -26,6 +26,12 @@
 		    html{
 		      scroll-behavior: smooth;
 		    }
+
+            .profile-pic{
+                max-width: 200px;
+                max-height:200px;
+                border-radius: 50%;
+            }
 	    </style>
 	    
     </head>
