--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -30,7 +30,7 @@
                     <input type="password" class="form-control" placeholder="Password" name="password">
                 </div>
                 <div id="forgot">
-                    <a href="">Forgot password?</a>
+                    <a href="{% url 'reset_password' %}">Forgot password?</a>
                 </div>
 
                 <button class="btn-login">Log In</button>
