--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -15,16 +15,29 @@ ul li{
 }
 
 #deppage #main #profile #name{
-	height: 100px;
 	font-size: 2.5em;
 	margin-top: 100px;
 	margin-bottom: 20px;
 	color: #002D40;
 }
 
-#deppage #main #profile #name svg{
-	margin-right: 30px;
-	margin-top: 15px;
+#deppage #main #profile #edit, #deppage #main #profile #chat{
+	font-size: 1.5vw;
+	margin-top: 100px;
+	margin-bottom: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#deppage #main #profile #edit a.btn{
+	background-color: #FF414D;
+	color: #D9ECF2;
+}
+
+#deppage #main #profile #chat a.btn{
+	background-color: #1AA6B7;
+	color: #D9ECF2;
 }
 
 #deppage #main #profile #heading strong{
