--- a/base/templates/base/profilestudent.html
+++ b/base/templates/base/profilestudent.html
@@ -4,17 +4,13 @@
 {% block content %}
 
 <div class="container" id="profile">
-	<div class="row" id="name">
-		<!-- <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-        </svg> -->
-        <!-- <span>{{request.user.get_full_name}}</span> -->
-        <div class="col-8" id="name">
+	<div class="row">
+        <div class="col-lg-8" id="name">
         	<img class="img-responsive profile-pic" src="{{s.profile_pic.url}}">
         	<span style="margin-left: 20px;">{{request.user.get_full_name}}</span>
         </div>
-        <div class="col-3" id="edit"><a href="{% url 'accountSettingsstudent' %}" class="btn">Account Settings</a></div>
-        <div class="col-1" id="chat"><a href="https://mysterious-atoll-60958.herokuapp.com/" class="btn">Chat</a></div>
+        <div class="col-lg-3" id="edit"><a href="{% url 'accountSettingsstudent' %}" class="btn">Account Settings</a></div>
+        <div class="col-lg-1" id="chat"><a href="https://mysterious-atoll-60958.herokuapp.com/" class="btn">Chat</a></div>
 	</div>
 	<hr>
 	<div class="row" id="profiledetails">
