--- a/base/templates/base/afterlogin.html
+++ b/base/templates/base/afterlogin.html
@@ -61,15 +61,65 @@
 
                 <div class="container">
                     <div class="row">
-                        <div class="searchbar">
-                            <input class="search_input" type="text" name="" placeholder="Search...">
-                            <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                        <div class="searchbar col-4">
+                            <form action="{% url 'searchposts' %}" method="GET" value="{{request.GET.q}}">
+
+                            <input type="text" name="q" value="{{request.GET.q}}" class="search_input" type="text" placeholder="Search...">
+                            <!-- <input type="submit" name="submit" value="Search"/> -->
+                            <button class="search_icon" name="submit" value="Search"><i class="fas fa-search"></i></button>
+
+                            </form>
+                            <!-- {% if submitbutton == 'Search' and request.GET.q != '' %} -->
+
+
+                                <!-- {% if results %} -->
+
+<!-- 
+                                    <h1>Showing results for {{ request.GET.q }}</h1>
+                                    <br/><br/>
+
+                                    <div class="container" id="faculty">
+                                        <div class="row">
+                                            {% for result in results %}
+                                                <div class="col-md-6 scrolleffect">
+                                                    <div class="row mx-0" id="faculty-box">
+                                                        <div class="col-md-4 px-0">
+                                                            <div id="faculty-img">
+                                                                <img class="img-responsive" src="{{result.profile_pic.url}}">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-8 pr-0" id="details">
+                                                            <p><strong>{{result.UserName}}</strong></p>
+                                                            <p>{{result.Type}}</p>
+                                                            <p><strong>Specialization</strong></p>
+                                                            <p>{{result.Special}}</p>
+                                                            <p><strong>Email</strong></p>
+                                                            <p>{{result.Email}}</p>
+                                                            <a href="">Chat</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                    </div> -->
+
+                                    <!-- {% for result in results %}
+                                        {{result}}  -->
+
+
+                                    <!-- {% endfor %} -->
+                                <!-- {% else %}
+                                    No search results for this query
+                                {% endif %} -->
+                            <!-- {% endif %} -->
+                            <!-- <input class="search_input" type="text" name="" placeholder="Search...">
+                            <a href="#" class="search_icon"><i class="fas fa-search"></i></a> -->
                         </div>
-                        <div class="person d-none d-md-block">
+                        <div class="person d-none d-md-block col-7">
                             <i class="fas fa-user"></i>
                             <span>{{request.user.get_full_name}}</span>
                         </div>
-                        <div class="dropdown d-md-none person">
+                        <div class="dropdown d-md-none person col-4">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-user"></i>
                                 <span>{{request.user.get_full_name}}</span>
