--- a/base/templates/base/search.html
+++ b/base/templates/base/search.html
@@ -50,7 +50,7 @@
 		                        <p><strong>{{result.UserName}}</strong></p>
 		                        <p><strong>Email</strong></p>
 		                        <p>{{result.Email}}</p>
-		                        <a href="">Chat</a>
+		                        <a href="<https://glacial-dusk-17636.herokuapp.com/">Chat</a>
 		                    </div>
 		                </div>
 		            </div>
