--- a/base/templates/base/teacherlist.html
+++ b/base/templates/base/teacherlist.html
@@ -20,7 +20,9 @@
 					<p>{{i.Special}}</p>
 					<p><strong>Email</strong></p>
 					<p>{{i.Email}}</p>
-					<a href="">Chat</a>
+					<a href="https://mysterious-atoll-60958.herokuapp.com/">Chat</a>
+					<!-- <a href="https://lit-garden-28402.herokuapp.com/">Chat</a> -->
+
 				</div>
 			</div>
 		</div>
